grammar.js
    source_file: ($) => repeat($._statement),

    _statement: ($) =>
      choice(
        $.labeled_statement,
        $._unlabeled_statement,
      ),

    labeled_statement: ($) => seq(repeat1($.statement_prefix), $._unlabeled_statement),

    statement_prefix: ($) =>
      choice(
        seq(field('label', $.identifier), ':'),
        seq('(', commaSep1($.identifier), ')', ':'),
      ),

    _unlabeled_statement: ($) =>
      choice(
        $.null_statement,
        $.package_statement,
        $.procedure_statement,
        $.begin_statement,
        $.do_statement,
        $.select_statement,
        $.if_statement,
        $.declare_statement,
        $.assignment_statement,
        $.call_statement,
        $.fetch_statement,
        $.return_statement,
        $.goto_statement,
        $.stop_statement,
        $.iterate_statement,
        $.leave_statement,
        $.entry_statement,
        $.on_statement,
        $.revert_statement,
        $.signal_statement,
        $.get_statement,
        $.put_statement,
        $.open_statement,
        $.close_statement,
        $.read_statement,
        $.write_statement,
        $.rewrite_statement,
        $.delete_statement,
        $.allocate_statement,
        $.free_statement,
        $.format_statement,
        $.default_statement,
        $.exec_statement,
        $.preprocessor_include,
        $.preprocessor_declare,
        $.preprocessor_assignment,
        $.preprocessor_if_statement,
        $.preprocessor_do_statement,
        $.preprocessor_simple,
      ),

    procedure_statement: ($) => seq($.procedure_heading, repeat($._statement), $.end_statement),

    procedure_heading: ($) =>
      seq(
        choice(kw('PROCEDURE'), kw('PROC')),
        optional($.parameter_list),
        repeat($._block_attribute),
        ';',
      ),

    parameter_list: ($) => seq('(', optional(commaSep1($.identifier)), ')'),

    begin_statement: ($) =>
      seq(kw('BEGIN'), repeat($._block_attribute), ';', repeat($._statement), $.end_statement),

    end_statement: ($) => seq(kw('END'), optional($.identifier), ';'),

    if_statement: ($) =>
      prec.right(
        seq(
          kw('IF'),
          field('condition', $._expression),
          kw('THEN'),
          field('consequence', $._statement),
          optional(seq(kw('ELSE'), field('alternative', $._statement))),
        ),
      ),

    // -- Declarations -----------------------------------------------------

    declaration_item: ($) =>
      seq(
        optional(field('level', $.level_number)),
        field('name', choice($.identifier, $.factored_name_list)),
        repeat($._attribute),
      ),

    _attribute: ($) => choice($.dimension_attribute, $._block_attribute),

    // Attributes usable on a procedure/entry/begin/package heading, i.e.
    // everything except `dimension_attribute` -- which would otherwise be
    // ambiguous with a leading parameter list, e.g. `PROC(X, Y);`.
    _block_attribute: ($) =>
      choice(
        $.fixed_attribute,
        $.float_attribute,
        $.decimal_attribute,
        $.binary_attribute,
        $.char_attribute,
        $.bit_attribute,
        $.picture_attribute,
        $.pointer_attribute,
        $.offset_attribute,
        $.area_attribute,
        $.simple_attribute,
        $.entry_attribute,
        $.returns_attribute,
        $.like_attribute,
        $.defined_attribute,
        $.based_attribute,
        $.init_attribute,
        $.options_attribute,
        $.environment_attribute,
      ),

    precision: ($) => seq('(', $._expression, optional(seq(',', $._expression)), ')'),

    fixed_attribute: ($) =>
      prec.right(seq(choice(kw('FIXED'), kw('FIXEDOVERFLOW')), optional($.precision))),
    binary_attribute: ($) =>
      prec.right(seq(choice(kw('BINARY'), kw('BIN')), optional($.precision))),

    returns_attribute: ($) => seq(kw('RETURNS'), '(', $.attribute_spec, ')'),

    attribute_spec: ($) => repeat1($._attribute),

    options_attribute: ($) => seq(kw('OPTIONS'), $.paren_group),

    paren_group: ($) =>
      seq('(', repeat(choice($.identifier, $.number, $.string_literal, $.paren_group)), ')'),

    // -- Simple statements ------------------------------------------------

    assignment_statement: ($) =>
      seq(
        commaSep1(field('target', $.reference)),
        '=',
        field('value', $._expression),
        optional(seq(kw('BY'), kw('NAME'))),
        ';',
      ),

    call_statement: ($) =>
      seq(
        kw('CALL'),
        field('entry', $.reference),
        optional($.argument_list),
        repeat($.call_option),
        ';',
      ),

    argument_list: ($) => seq('(', optional(commaSep1($.argument)), ')'),

    argument: ($) => choice($._expression, '*'),

    return_statement: ($) => seq(kw('RETURN'), optional(seq('(', $._expression, ')')), ';'),

    put_statement: ($) => seq(kw('PUT'), repeat($.io_option), optional($.data_spec), ';'),
    io_option: ($) =>
      choice(
        seq(kw('FILE'), '(', $.reference, ')'),
        seq(kw('STRING'), '(', $.reference, ')'),
        kw('PAGE'),
        seq(kw('LINE'), '(', $._expression, ')'),
        seq(kw('SKIP'), optional(seq('(', $._expression, ')'))),
        kw('COPY'),
      ),

    data_spec: ($) =>
      choice(
        seq(kw('LIST'), '(', commaSep1($.data_list_item), ')'),
        seq(kw('DATA'), optional(seq('(', commaSep1($.reference), ')'))),
        seq(kw('EDIT'), '(', commaSep1($.data_list_item), ')', $.format_list),
      ),

    data_list_item: ($) =>
      choice(
        $._expression,
        seq(
          '(',
          $.data_list_item,
          kw('DO'),
          field('control', $._expression),
          '=',
          commaSep1($.do_specification_element),
          ')',
        ),
      ),

    format_list: ($) => seq('(', commaSep1($.format_item), ')'),

    format_item: ($) =>
      choice(
        seq('(', field('factor', $._expression), ')', '(', commaSep1($.format_item), ')'),
        seq($.identifier, optional($.argument_list)),
        seq($.identifier, $.string_literal),
      ),

    // -- Record I/O -----------------------------------------------------

    open_statement: ($) => seq(kw('OPEN'), commaSep1($.open_file_spec), ';'),

    open_file_spec: ($) =>
      seq(kw('FILE'), '(', $.reference, ')', repeat($.file_option)),

    file_option: ($) =>
      choice(
        kw('INPUT'),
        kw('OUTPUT'),
        kw('UPDATE'),
        kw('STREAM'),
        kw('RECORD'),
        kw('SEQUENTIAL'),
        kw('DIRECT'),
        kw('BUFFERED'),
        kw('UNBUFFERED'),
        kw('PRINT'),
        kw('BACKWARDS'),
        kw('KEYED'),
        seq(kw('TITLE'), '(', $._expression, ')'),
        seq(choice(kw('ENVIRONMENT'), kw('ENV')), $.paren_group),
        seq(kw('LINESIZE'), '(', $._expression, ')'),
        seq(kw('PAGESIZE'), '(', $._expression, ')'),
      ),

    close_statement: ($) =>
      seq(kw('CLOSE'), commaSep1(seq(kw('FILE'), '(', $.reference, ')')), ';'),

    read_statement: ($) =>
      seq(kw('READ'), kw('FILE'), '(', $.reference, ')', repeat($.read_option), ';'),

    read_option: ($) =>
      choice(
        seq(kw('INTO'), '(', $.reference, ')'),
        seq(kw('SET'), '(', $.reference, ')'),
        seq(kw('KEY'), '(', $._expression, ')'),
        seq(kw('KEYTO'), '(', $.reference, ')'),
        kw('IGNORE'),
      ),

    preprocessor_include: ($) =>
      seq('%', kw('INCLUDE'), commaSep1($.include_spec), ';'),

    include_spec: ($) => choice($.identifier, seq($.identifier, '(', $.identifier, ')')),

    preprocessor_declare: ($) =>
      seq('%', choice(kw('DECLARE'), kw('DCL')), commaSep1($.declaration_item), ';'),

    preprocessor_if_statement: ($) =>
      prec.right(
        seq(
          '%',
          kw('IF'),
          $._expression,
          '%',
          kw('THEN'),
          $._statement,
          optional(seq('%', kw('ELSE'), $._statement)),
        ),
      ),

    preprocessor_do_statement: ($) =>
      seq(
        '%',
        kw('DO'),
        optional($.do_specification),
        ';',
        repeat($._statement),
        '%',
        kw('END'),
        ';',
      ),

    _expression: ($) =>
      choice(
        $.number,
        $.string_literal,
        $.bit_literal,
        $.hex_literal,
        $.reference,
        $.parenthesized_expression,
        $.unary_expression,
        $.binary_expression,
      ),

    parenthesized_expression: ($) => seq('(', $._expression, ')'),

    // NOT/OR/concatenation accept multiple glyphs because the EBCDIC code
    // point PL/I assigns to each of these symbols is rendered differently
    // depending on the EBCDIC code page in use (e.g. NOT is `¬` under
    // code page 037 but `^` under 273; OR is `|` under 037 but `!` under
    // 273, with concatenation `||`/`!!` following suit).
    unary_expression: ($) =>
      prec(5, seq(field('operator', choice('+', '-', '¬', '^')), field('operand', $._expression))),

    binary_expression: ($) =>
      choice(
        prec.right(6, seq(field('left', $._expression), '**', field('right', $._expression))),
        prec.left(4, seq(field('left', $._expression), field('operator', choice('*', '/')), field('right', $._expression))),
        prec.left(3, seq(field('left', $._expression), field('operator', choice('+', '-', '||', '!!')), field('right', $._expression))),
        prec.left(
          2,
          seq(
            field('left', $._expression),
            field(
              'operator',
              choice('<', '<=', '=', '>', '>=', '¬=', '^=', '¬<', '^<', '¬>', '^>'),
            ),
            field('right', $._expression),
          ),
        ),
        prec.left(1, seq(field('left', $._expression), '&', field('right', $._expression))),
        prec.left(0, seq(field('left', $._expression), choice('|', '!'), field('right', $._expression))),
      ),

    reference: ($) =>
      prec.left(
        seq(
          $._name,
          repeat(
            choice(
              seq('(', optional(commaSep1($.argument)), ')'),
              seq('.', $._name),
              seq('->', $._name),
            ),
          ),
        ),
      ),

    _name: ($) => choice($.identifier, $.builtin_name),

    builtin_name: (_$) =>
      choice(
        kw('SUBSTR'),
        kw('INDEX'),
        kw('LENGTH'),
        kw('TRIM'),
        kw('TRANSLATE'),
        kw('VERIFY'),
        kw('REPEAT'),
        kw('COPY'),
        kw('LOW'),
        kw('HIGH'),
        kw('ABS'),
        kw('MOD'),
        kw('SIGN'),
        kw('MAX'),
        kw('MIN'),
        kw('SQRT'),
        kw('SIN'),
        kw('COS'),
        kw('TAN'),
        kw('ATAN'),
        kw('LOG'),
        kw('LOG10'),
        kw('LOG2'),
        kw('EXP'),
        kw('FLOOR'),
        kw('CEIL'),
        kw('ROUND'),
        kw('TRUNC'),
        kw('BINARY'),
        kw('DECIMAL'),
        kw('FIXED'),
        kw('FLOAT'),
        kw('CHAR'),
        kw('CHARACTER'),
        kw('BIT'),
        kw('STRING'),
        kw('ADDR'),
        kw('ADDRDATA'),
        kw('NULL'),
        kw('ONCODE'),
        kw('ONLOC'),
        kw('ONSOURCE'),
        kw('ONCHAR'),
        kw('ONFILE'),
        kw('ONKEY'),
        kw('DATE'),
        kw('TIME'),
        kw('DATETIME'),
        kw('LBOUND'),
        kw('HBOUND'),
        kw('DIM'),
        kw('SIZE'),
        kw('STORAGE'),
        kw('UNSPEC'),
        kw('COMPLEX'),
        kw('CPLX'),
        kw('REAL'),
        kw('IMAG'),
        kw('CONJG'),
        kw('PRECISION'),
        kw('PREC'),
        kw('POLY'),
        kw('DIVIDE'),
        kw('ALLOCATION'),
        kw('EMPTY'),
        kw('POINTERVALUE'),
        kw('POINTERADD'),
        kw('VALID'),
      ),

    identifier: (_$) => /[A-Za-z#$@][A-Za-z0-9#$@_]*/,

    number: (_$) =>
      token(
        seq(
          choice(seq(/[0-9]+/, optional(seq('.', /[0-9]*/))), seq('.', /[0-9]+/)),
          optional(seq(/[Ee]/, optional(/[+-]/), /[0-9]+/)),
          optional(/[Bb]/),
          optional(/[Ii]/),
        ),
      ),

    // Multics PL/I uses " as a string delimiter; Enterprise PL/I only '.
    string_literal: (_$) =>
      token(
        choice(
          seq("'", repeat(choice(/[^']/, "''")), "'"),
          seq('"', repeat(choice(/[^"]/, '""')), '"'),
        ),
      ),
